 . Chipmunk: updated to v5.2 (issue #784)
 . RenderTexture: removed limit when saving images (issue #782)
 . TMX: if layer contains cc_vertezx=automatic, tiles will use vertexZ and GL_ALPHA_TEST (issue #780)
 . TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)
 . TMX: TMXLayer uses the opacity defined for the layer (issue #785)
 . Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)
 
version 0.99.0 - 18-Feb-2010
 . CocosDenshion: background music can loop (issue #774)
 . CocosDenshion: allow audio session category to be changed (issue #775)
 . CocosDenshion: can be initialized before cocos2d (issue #777, #773)

version 0.99.0-final - 15-Feb-2010
 . Box2d: updated to r58 (issue #494)
 . Director: Only send "cleanup" when the scene is replaced (re fixed issue #709)
 . CocosDenshion: SimpleAudioEngine incorrectly accessing CDAudioManager (issue #748)
 . CocosDenshion: added support for 22Khz OpenAL (issue #594)
 . CocosDenshion: fixed wrong error check in CocosDenshion (issue #678)
 . CocosDenshion: added shutdown method (issue #688)
 . CocosDenshion: allow usage of alBufferDataStatic (issue #753)
 . CocosDenshion: added stopAllSounds (issue #756)
 . CocosDenshion: fixed small leak in background music file name string (issue #644)
 . CocosDenshion: CDAudioManager support for multiple AVAudioPlayers (issue #764)
 . Compatiblity: TextureNode is subclass of CCSprite (issue #755)
 . Node: only uses bits as bools, when they are not properties (fixed issue #743)
 . Node: relativeAnchorPoint renamed to isRelativeAnchorPoint (issue #749)
 . Node: improved doxygen string in rotation (issue #761)
 . Sprite: use correct blending functions (issue #728)
 . Sprite: supports CGImageRef with key (issue #349)
 . Sprite: when texture is nil, supports opacity & color (issue #741)
 . Sprite: setTextureRect() and setColor() works OK with subchildren (issue #763)
 . SpriteFrameCache: removed @syncronized() (issue #663)