@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE map SYSTEM "http://mapeditor.org/dtd/1.0/map.dtd">
+<map version="1.0" orientation="isometric" width="30" height="30" tilewidth="64" tileheight="32">
+ <tileset firstgid="1" name="iso-test" tilewidth="64" tileheight="115" spacing="2" margin="2">
+  <image source="iso-test.png"/>
+ </tileset>
+ <layer name="grass" width="30" height="30" opacity="0.5">
+  <data encoding="base64" compression="gzip">
+   H4sIAAAAAAAAA+3VwQkAAAgCQNt/6ZaIgjjBr/e0ktRRt8PlcrlcLnduZ/v3uVwu97t70QaXptU4EA4AAA==
+  </data>
+ </layer>
+ <layer name="trees3" width="30" height="30" x="-7" y="7">
+  <data encoding="base64" compression="gzip">
+   H4sIAAAAAAAAA+3NMQ0AAAwDoB71r7ke9i0BAyQAAHxXJ3AwBKd25hAOAAA=
+  </data>
+ </layer>
+ <layer name="trees2" width="30" height="30" x="4" y="-7">
+  <data encoding="base64" compression="gzip">
+   H4sIAAAAAAAAA+3NMQEAAAzDoBzzr3lCCgYoAACAPefsASYrBSMQDgAA
+  </data>
+ </layer>
+ <layer name="trees1" width="30" height="30" x="-3" y="-3">
+  <data encoding="base64" compression="gzip">
+   H4sIAAAAAAAAA+3NMQ0AAAwDoB71r7kulh1ggAQAAOCPOs/OAa5m6+4QDgAA
+  </data>
+ </layer>
+</map>
