@@ -10,6 +10,7 @@ version 0.99.1 - XX-MMM-2010
  . TMX: if layer contains cc_vertezx=automatic, tiles will use vertexZ and GL_ALPHA_TEST (issue #780)
  . TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)
  . TMX: TMXLayer uses the opacity defined for the layer (issue #785)
+ . TMX: TMXLayer supports Tiled offset property (issue #616)
  . Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)
  
 version 0.99.0 - 18-Feb-2010
